Alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ div.equals {
   -webkit-text-stroke-color: black;
   margin: -0.25em;
   margin-top: -0.45em;
+  padding-right: 1.17em;
 }
 
 /* Chrome, Safari, Edge, Opera */
